add javascript commit

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Mochiy+Pop+P+One&family=Neonderthaw&display=swap" rel="stylesheet">
+    <script defer src="main.js"></script>
     <title>Rabitube</title>
 </head>
 <body>
@@ -32,17 +33,18 @@
     <!-- video info &  -->
     <div class="infoAndUpnext">
         <section class="info">
-            <div class="matadata">
+            <div class="metadata">
                 <ul class="hashtags">
                     <li>#Rabiit</li>
                     <li>#Food</li>
                     <li>#Cute</li>
                 </ul>
                 <div class="titleAndButton">
-                    <span class="title">Clone Coding: Youtube Mobile Website
-                        유튜브 모바일 웹사이트 따라 만들기 | 2살된 귀여운 토순이 먹방영상
+                    <span class="title clamp">Clone Coding: Youtube Mobile Website
+                        유튜브 모바일 웹사이트 따라 만들기 | 작년에 입양되어서 저희 가족 막둥이가 되어 
+                        귀여움을 독차지하고 있는토순이 먹방영상
                     </span>
-                    <button class="moreBtn">
+                    <button class="moreBtn clicked">
                         <i class="fas fa-caret-down"></i>
                     </button>
                 </div>
